# kv_ipc

./: Cargo.toml  README.md  cbindgen.toml  rebuild_example_client.sh  regenerate_c_header.sh
example_client/: example_client.c
include/: libkv_ipc_client.h
src/: client.rs  ipc_client.rs  lib.rs  server.rs
