[package]
name = "kv_ipc"
version = "0.1.0"
edition = "2018"

[lib]
name = "kv_ipc"
crate-type = ["lib", "staticlib"]

[profile.release]
lto = true  # reduce size of built library

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "0.15.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

[dev-dependencies]
tempfile = "3.2.0"
