[package]
name = "kv_ipc"
version = "0.1.0"
edition = "2018"

[lib]
name = "kv_ipc"
crate-type = ["lib", "staticlib"]

[profile.release]
lto = true  # reduce size of built library

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
rand = "0.8.4"
rand_pcg = "0.3.1"
rmp-serde = "0.15.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
tempfile = "3.2.0"
